# services/api/docs/swagger-spec.yaml
@@ -323,6 +323,21 @@ paths:
         "201":
           description: As a response function returns success message
       tags: *a2
+  /api/user/forgot-password:
+    post:
+      operationId: UserController_forgotPassword
+      summary: Initiates password reset
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ForgotPasswordDto"
+      responses:
+        "201":
+          description: As a response function returns success message
+      tags: *a2
   /api/user/close-account:
     post:
       operationId: UserController_closeAccount
@@ -1341,6 +1356,28 @@ components:
       required:
         - password
         - passwordRepeat
+    SendVerificationEmailEventDto:
+      type: object
+      properties:
+        email:
+          type: string
+          nullable: false
+      required:
+        - email
+    ForgotPasswordDto:
+      type: object
+      properties:
+        email:
+          type: string
+          nullable: true
+        phone:
+          type: string
+          nullable: true
+        verificationString:
+          type: string
+          nullable: true
+      required:
+        - verificationString
     CloseAccEventDto:
       type: object
       properties:
